--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "alsciende/puissance4",
+    "description": "The game of Puissance 4",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
@@ -98,7 +100,7 @@
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
         "symfony/debug-bundle": "6.2.*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.48",
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.2.*",
         "symfony/web-profiler-bundle": "6.2.*"
